# sampling-for-learnability

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  start_wandb_sweep.py
sfl/deploy/: deploy_on_sampled_and_calc_regret.ipynb  eval_jaxnav_multi_agent_0_generate_levels.py  eval_jaxnav_multi_agent_1_rollout.py  eval_jaxnav_multi_agent_2_analyse.py  eval_jaxnav_single_agent_0_generate_levels.py  eval_jaxnav_single_agent_1_rollout.py  eval_jaxnav_single_agent_2_analyse.py  eval_minigrid_0_generate_levels.py  eval_minigrid_1_rollout.py  eval_minigrid_2_analyse.py  eval_single_agent_plot_minigrid.py  plot_utils.py  sample_map_test_set.py  sample_uniform_map_set.py  viz_jaxnav_on_sampled_set.py  viz_jaxnav_on_singletons.py  viz_minigrid_on_singletons.py
sfl/runners/: __init__.py  eval_runner.py  eval_singletons_runner.py
sfl/train/: jaxnav_plr.py  jaxnav_sfl.py  minigrid_plr.py  minigrid_sfl.py
sfl/util/: math.py  rolling_stats.py
sweep_configs/jaxnav-ma/: jaxnav-ma_accel_maxmc_5seeds.yaml  jaxnav-ma_accel_pvl_5seeds.yaml  jaxnav-ma_dr_5seeds.yaml  jaxnav-ma_plr_maxmc_5seeds.yaml  jaxnav-ma_plr_pvl_5seeds.yaml  jaxnav-ma_sfl_5seeds.yaml
sweep_configs/jaxnav-sa/: jaxnav-sa_accel_maxmc_10seeds.yaml  jaxnav-sa_accel_pvl_10seeds.yaml  jaxnav-sa_dr_10seeds.yaml  jaxnav-sa_plr_maxmc_10seeds.yaml  jaxnav-sa_plr_pvl_10seeds.yaml  jaxnav-sa_robust_plr_maxmc_10seeds.yaml  jaxnav-sa_sfl_10seeds.yaml
sweep_configs/minigrid/: minigrid_dr_10seeds.yaml  minigrid_plr_maxmc_10seeds.yaml  (+1 more)
xland/: .bash_history  Dockerfile  Makefile  README.md
(+539 files in other folders)
